# alchemy-notify-to-discord

./: .example.env  Cargo.toml  Dockerfile  README.md  ddl.sql  docker-compose.yaml  run.sh
src/: database.rs  discord.rs  lib.rs  main.rs
