[package]
name = "alchemy-notify-to-discord"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# web
actix-web = "4"

# general
dotenv = "0.15.0"
env_logger = "0.10.0"

# json
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.66"

# http request
reqwest = { version = "0.11.10", features = ["json"] }

# db
tokio-postgres = { version="0.7.6", features=["with-chrono-0_4"] }
chrono = "0.4.21"
deadpool-postgres = "0.10.5"
